fix(frontend, history modal): fix list overflow and scroll

--- a/frontend/pmt/src/app/components/modals/history-modal/history-modal.component.scss
+++ b/frontend/pmt/src/app/components/modals/history-modal/history-modal.component.scss
@@ -38,6 +38,7 @@
   padding: 1rem 1.5rem;
   overflow-y: auto;
   flex-grow: 1;
+  max-height: 70vh;
 }
 
 .modal-footer {
